# redirect

./: README.md  spin.toml
api/: Cargo.toml
api/src/: lib.rs
client/: index.html  script.js
redirect/: Cargo.toml
redirect/src/: lib.rs
