[package]
name = "redirect"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = "Short link redirector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] } 
serde_json = "1.0.94"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0" }
# url = "2.3.1"
# Crate that generates Rust Wasm bindings from a WebAssembly interface.
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
